fixed card heights & added a new font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/dp.png" />
     <meta name="theme-color" content="#2563EB" />
+    <meta property="og:title" content="Maniteja's portfolio" />
+    <meta
+      property="og:description"
+      content="This is the portfolio of Maniteja pratha"
+    />
+    <meta property="og:image" content="https://manitej.rocks/dp.png" />
+    <meta property="og:url" content="https://manitej.rocks/" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0,user-scalable=no, maximum-scale=1.0"
